[gd_scene load_steps=4 format=3 uid="uid://c3bkjibfhfofl"]

[ext_resource type="Script" uid="uid://ctflvn8gie88l" path="res://assets/scripts/singlescreen.gd" id="1_bp0l3"]
[ext_resource type="Script" uid="uid://d3p48lwnrft2t" path="res://assets/scripts/camera.gd" id="2_5f7m3"]
[ext_resource type="PackedScene" uid="uid://dnpilee0jidao" path="res://scenes/gui/pause_menu.tscn" id="4_i2xlj"]

[node name="Node2D" type="Node2D" groups=["splitscreen"]]
script = ExtResource("1_bp0l3")

[node name="SingleplayerTimerLabel" type="Label" parent="."]
z_index = 1
offset_left = 399.0
offset_top = 435.0
offset_right = 684.0
offset_bottom = 615.0
theme_override_font_sizes/font_size = 80
text = "000"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="ViewportContainerP1" type="SubViewportContainer" parent="."]
offset_left = 270.0
offset_right = 810.0
offset_bottom = 1920.0
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="ViewportContainerP1"]
handle_input_locally = false
size = Vector2i(540, 1920)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="ViewportContainerP1/SubViewport" groups=["Player1Camera"]]
offset = Vector2(136, 0)
position_smoothing_enabled = true
script = ExtResource("2_5f7m3")

[node name="BorderLeft" type="ColorRect" parent="."]
editor_description = "Original Color: 9c0000"
offset_right = 270.0
offset_bottom = 1920.0
color = Color(0, 0, 0, 1)

[node name="BorderRight" type="ColorRect" parent="."]
editor_description = "Original Color: 9c0000"
offset_left = 809.0
offset_right = 1080.0
offset_bottom = 1920.0
color = Color(0, 0, 0, 1)

[node name="PauseMenu" parent="." instance=ExtResource("4_i2xlj")]
visible = false
custom_minimum_size = Vector2(1080, 1920)
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1080.0
offset_bottom = 1920.0
grow_horizontal = 1
grow_vertical = 1

[node name="SingleplayerTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="SingleplayerTimer" to="." method="_on_singleplayer_timer_timeout"]
